# clara

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  REFERENCE.md
.github/: pull_request_template.md
.github/workflows/: cpp-testing-linux-base-gpu.yml  cpp-testing-linux-base.yml  cpp-testing-linux-base.yml.backup  cpp-testing-linux.yml  cpp-testing-mac.yml  cpp-testing-windows-base.yml  cpp-testing-windows.yml  cpp-testing.yml  cpp-testing.yml.backup  docker-testing.yml  docker-testing.yml.backup
clara_test/: CMakeLists.txt  CMakeListsWindows.txt  run_test
clara_test/tests/: CMakeLists.txt  entanglement_testing.cpp  input_output_testing.cpp  operations.cpp  random_clara.cpp  testing_main.cpp  traits.cpp
clara_test/tests/classFunction/: codes_testing.cpp  gates.cpp  gates_testing.cpp  idisplay_testing.cpp  random_devices_testing.cpp  reversible_testing.cpp  states_testing.cpp  timer.cpp  timer_testing.cpp
clara_test/tests/internal/: util_testing.cpp
clara_test/tests/internal/classFunction/: iomanip_testing.cpp  singleton_testing.cpp
docker/: Dockerfile.channels  Dockerfile.clara_test
include/: clara.h  constants.h  entanglement.h  entropies.h  entropy.h  functional.h  functions.h  gates.h  input_output.h  instruments.h  internal.h  io.h  macros.h  number_theory.h  operations.h  options.h  random.h  stat.h  statistics.h  traits.h  traits.hpp  types.h  util.h
include/classFunction/: circuit.h  codes.h  exception.h  gates.h  idisplay.h  init.h  interface_display.h  layout.h  random_devices.h  reversible.h  states.h  timer.h
include/experimental/: experimental_test.h
include/internal/: util.h
include/internal/classFunction/: iomanip.h  nop_circuit_step.h  singleton.h  vector_proxy.h
src/: clara.cpp  gates.cpp  main.cpp  util.cpp
testing/: _test.cpp  channels.cpp  entropies.cpp  grover_search.cpp  measurement.cpp  minimal.cpp  operation.cpp  quantum_fourier.cpp
